New fixed mistakes fruit-shop. Fixed public class Main, Deleted public class AppConfig.